--- a/assets/style.css
+++ b/assets/style.css
@@ -82,11 +82,12 @@ body {
 }
 
 /* UV Classes */
-.UVlow {
+.UVLow {
   background-color: rgb(76, 146, 41);
 }
 .UVModerate {
   background-color: rgb(245, 227, 76);
+  color: rgb(233, 114, 64);
 }
 .UVHigh {
   background-color: rgb(232, 100, 43);
