--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,29 @@ body {
   background-color: rgb(102, 79, 196);
 }
 
+/* ID STYLES */
+#currentDay {
+  color: rgb(255, 217, 0);
+}
+#weatherDisplay {
+  animation: iconOpacity 4s infinite;
+  background: url();
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: initial;
+}
+@keyframes iconOpacity {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 /* MEDIA QUERIES */
 @media (min-width: 576px) {
   .rulesVH {
