--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,9 @@ body {
 .card-header {
   border-bottom: none;
 }
+.clearBack {
+  background-color: #ffffff;
+}
 .coolCloud {
   background-color: rgb(225, 233, 233);
   color: rgb(61, 77, 69);
